--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,3 +4,8 @@ spring:
     username: postgres
     password: postgres
     url: jdbc:postgresql://192.168.1.103:5432/learn-jvm
+
+logging:
+  level:
+    org:
+      springframework: debug
