--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,7 @@ management:
     distribution:
       percentiles-histogram:
         "[http.server.requests]": true
+
+app:
+  names:
+    search-field-name: search
