--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
     validate-on-migrate: true
     default-schema: public
 
+  context:
+    component-classes:
+      register:
+
+
 logging:
   level:
     org:
