--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,13 @@ spring:
     name: learn-jvm
 
   profiles:
-    active: dev
+    active: ${SPRING_PROFILES_ACTIVE}
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: postgres
-    url: jdbc:postgresql://192.168.1.101:5432/learn-jvm
+    username: ${USERNAME_DATABASE_NODE_PROD:postgres}
+    password: ${PASSWORD_DATABASE_NODE_PROD:postgres}
+    url: jdbc:postgresql://${IP_NODE_DATABASE_PROD:192.168.1.101}:${PORT_NODE_DATABASE_PROD:5432}/learn-jvm
 
   flyway:
     enabled: true
