--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: learn-jvm
 
+  config:
+    import: file:.env[.properties]
+
   profiles:
     active: ${SPRING_PROFILES_ACTIVE}
 
