--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,16 @@ spring:
     validate-on-migrate: true
     default-schema: public
 
+  messages:
+    basename: messages/messages
+    use-code-as-default-message: true
+    encoding: UTF-8
+    always-use-message-format: true
+    locale-default: en
+
+  main:
+    allow-bean-definition-overriding: true
+
 logging:
   level:
     org:
@@ -36,17 +46,6 @@ management:
         "[http.server.requests]": true
 
 app:
-  filtering:
-    articles:
-      published:
-        - Сначала не опубликованные
-        - Сначала опубликованные
-        - Сортировка по публикации
-      label:
-        - Сначала по алфавиту
-        - Сначала не по алфавиту
-        - Сортировка по названию
-
   names:
     search-field-name: search
     sort-name: sort
