--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,3 @@
-server:
-  port: 8081
-
-
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -12,14 +8,14 @@ spring:
 logging:
   level:
     org:
-      springframework: debug
+      springframework: info
 
 management:
-  endpoints.web.exposure.include:
+  endpoints.web.exposure.include: 'prometheus, health'
   endpoint:
     prometheus:
-      enabled: false
+      enabled: true
   metrics:
     distribution:
       percentiles-histogram:
-        "[http.server.requests]": false
+        "[http.server.requests]": true
